retouche de la page utilisateur en ajoutant les fonctionalite de modification par l'admin. installation de l'app contact

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,14 +38,14 @@
             <span class="oi oi-menu"></span> Menu
           </button>
 
-          <div class="collapse navbar-collapse" id="ftco-nav">
+          <div class="collapse navbar-collapse" >
             <ul class="navbar-nav nav ml-auto">
-              <li class="nav-item"><a href="#" class="nav-link" data-nav-section="home"><span>Home</span></a></li>
-              <li class="nav-item"><a href="#" class="nav-link" data-nav-section="about"><span>About</span></a></li>
-              <li class="nav-item"><a href="#" class="nav-link" data-nav-section="projects"><span>Galerie</span></a></li>
-              <li class="nav-item"><a href="#" class="nav-link" data-nav-section="projet"><span></span>Projects</a></li>
-              <li class="nav-item"><a href="#" class="nav-link" data-nav-section="blog"><span>Blog</span></a></li>
-              <li class="nav-item"><a href="#" class="nav-link" data-nav-section="contact"><span>Contact</span></a></li>
+              <li class="nav-item"><a href="#home" class="nav-link"><span>Home</span></a></li>
+              <li class="nav-item"><a href="#about" class="nav-link"><span>About</span></a></li>
+              <li class="nav-item"><a href="#galerie" class="nav-link"><span>Galerie</span></a></li>
+              <li class="nav-item"><a href="#projet" class="nav-link"><span></span>Projects</a></li>
+              <li class="nav-item"><a href="/post/#blog" class="nav-link"><span>Blog</span></a></li>
+              <li class="nav-item"><a href="#contact" class="nav-link"><span>Contact</span></a></li>
               <li class="nav-item cta"><a href="#" class="nav-link">Faire un Don</a></li>
               <li class="nav-item cta"><a href="#" class="nav-link">S'inscrir au groupe</a></li>
 
@@ -55,6 +55,7 @@
     </nav>
 
     {% block content %}
+
     {% endblock %}
 
     <!-- statrt footer -->
@@ -76,7 +77,7 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span></a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
