--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,60 @@
-{% extends 'base.html' %}
+{% extends 'base1.html' %}
 
-{% block content %}
+{% block content %}	
+	<section class="hero-wrap hero-wrap-2" style="background-image: url('/static/images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+	    <div class="overlay"></div>
+	    <div class="container">
+	      <div class="row no-gutters slider-text align-items-end justify-content-center">
+	        <div class="col-md-9 ftco-animate pb-5 text-center">
+	          <h1 class="mb-3 bread">Our Stories</h1>
+	          <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Blog Single <i class="ion-ios-arrow-forward"></i></span></p>
+	        </div>
+	      </div>
+	    </div>
+	  </section>
 
-<div class="centerstage">
-{% for post in post_list %}
-	<br>
-	<div class="card w-50">
-	  <div class="card-block" style="margin:30px ">
-	    <h3 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
-	    <hr>
-	    <p class="card-text"><h4>{{ post.text|safe|linebreaksbr }}</h4></p>
-	    <div class="date">
-                <p>Published on: {{ post.published_date|date:"D M Y"}}</p>
-            </div>
-	    <a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-primary">Comments: {{ post.approve_comments.count }}</a>
-	  </div>
-	</div>
-{% endfor %}
-</div>
+
+	<section class="ftco-section bg-light" data-section="blog">
+	    <div class="container">
+	        <div class="row justify-content-center mb-5 pb-5">
+	            <div class="col-md-7 heading-section text-center ftco-animate">
+	            <span class="subheading">Blog</span>
+	            <h2 class="mb-4">Etre au courant de nos nouvels</h2>
+	            <p>Dr koledzi  komi ................</p>
+	        </div>
+	    </div>
+		<div class="centerstage">
+			{% for post in post_list %}
+			<div class="row d-flex">
+		        <div class="col-md-4 d-flex ftco-animate">
+		          	<div class="blog-entry justify-content-end">
+		              	<a href="post/" class="block-20" style="background-image: url('/static/images/image_1.jpg');"></a>
+		              	<div class="text mt-3 float-right d-block">
+		              		<div class="d-flex align-items-center pt-2 mb-4 topp">
+		                  	{#la partie qui va se charger  de la selection et de la mise en place des news#}
+
+			              		<div class="one mr-3">
+			              			<span class="day">Published on: {{ post.published_date|date:"D M Y"}}</span>
+			              		</div>
+			              		<!--div class="two">
+			              			<span class="yr">2019</span>
+			              			<span class="mos">March</span>
+			              		</div-->
+		              		</div>
+			                <h3 class="heading"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
+			                <p>{{ post.text|safe|linebreaksbr }}</p>
+		                	<div class="d-flex align-items-center mt-4 meta">
+				                <p class="mb-0"><a href="{% url 'post_detail' pk=post.pk %}" class="btn btn-secondary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
+				                <p class="ml-auto mb-0">
+				                	<a href="#" class="mr-2">Admin</a>
+				                	<a href="#" class="meta-chat"><span class="icon-chat"></span> Comments: {{ post.approve_comments.count }}</a>
+				                </p>
+			                </div>
+		            	</div>
+		            </div>
+		        </div>
+			</div>
+			{% endfor %}
+		</div>
+	</section>
 {% endblock %}
