--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-  	<section class="hero-wrap js-fullheight" style="background-image: url('/static/images/bg_1.jpg');" data-section="home">
+  	<section class="hero-wrap js-fullheight" style="background-image: url('/static/images/bg_1.jpg');" id="home">
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
           <div class="col-md-8 ftco-animate mt-5" data-scrollax=" properties: { translateY: '70%' }">
@@ -23,7 +23,7 @@
             <div class="media block-6 services text-center d-block">
               <div class="icon"><span class="flaticon-layers"></span></div>
               <div class="media-body">
-                <h3 class="heading mb-3"> Histoire</h3>
+                <h3 class="heading mb-3"> Histoire </h3>
                 <p>histoire du village.</p>
                 <p><a href="#" class="btn btn-primary">Read more</a></p>
               </div>
@@ -53,7 +53,7 @@
       </div>
     </section>
 
-    <section class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb" id="section-counter" data-section="about">
+    <section class="ftco-counter img ftco-section ftco-no-pt ftco-no-pb" id="about">
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-md-6 col-lg-4 d-flex">
@@ -71,7 +71,7 @@
 			          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate d-flex">
 			            <div class="block-18 text-center p-4 mb-4 align-self-stretch d-flex">
 			              <div class="text">
-			                <strong class="number" data-number="30">0</strong>
+			                <strong class="number" data-number="{{about.experience_year }}">0</strong>
 			                <span>d'anne d'experience</span>
 			              </div>
 			            </div>
@@ -79,7 +79,7 @@
 			          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate d-flex">
 			            <div class="block-18 text-center py-4 px-3 mb-4 align-self-stretch d-flex">
 			              <div class="text">
-			                <strong class="number" data-number="1000">0</strong>
+			                <strong class="number" data-number="{{about.project_finish }}">0</strong>
 			                <span>Project realises</span>
 			              </div>
 			            </div>
@@ -87,7 +87,7 @@
 			          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate d-flex">
 			            <div class="block-18 text-center py-4 px-3 mb-4 align-self-stretch d-flex">
 			              <div class="text">
-			                <strong class="number" data-number="100">0</strong>
+			                <strong class="number" data-number="{{about.project_appending}}">0</strong>
 			                <span>projets en cours</span>
 			              </div>
 			            </div>
@@ -95,7 +95,7 @@
 			          <div class="col-md-6 col-lg-3 justify-content-center counter-wrap ftco-animate d-flex">
 			            <div class="block-18 text-center py-4 px-3 mb-4 align-self-stretch d-flex">
 			              <div class="text">
-			                <strong class="number" data-number="1100">0</strong>
+			                <strong class="number" data-number="{{about.project_not_start}}">0</strong>
 			                <span>projet non debuder</span>
 			              </div>
 			            </div>
@@ -106,7 +106,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-project bg-light" data-section="projects">
+    <section class="ftco-section ftco-project bg-light" id="galerie">
     	<div class="container-fluid px-md-5">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -117,6 +117,7 @@
     		<div class="row">
     			<div class="col-md-12 testimonial">
             <div class="carousel-project owl-carousel">
+              {%for tof in photo%}
             	<div class="item">
             		<div class="project">
 		    					<div class="img">
@@ -126,74 +127,16 @@
 				    				</a>
 			    				</div>
 			    				<div class="text px-4">
-			    					<h3><a href="#">Office Interior Design</a></h3>
-			    					<span>Interior Design</span>
+			    					<h3><a href="#">{{tof.title}}</a></h3>
 			    				</div>
 		    				</div>
             	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="/static/images/project-2.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<a href="/static/images/project-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-				    					<span class="icon-expand"></span>
-				    				</a>
-			    				</div>
-			    				<div class="text px-4">
-			    					<h3><a href="#">Office Interior Design</a></h3>
-			    					<span>Interior Design</span>
-			    				</div>
-		    				</div>
-            	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="/static/images/project-3.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<a href="/static/images/project-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-				    					<span class="icon-expand"></span>
-				    				</a>
-			    				</div>
-			    				<div class="text px-4">
-			    					<h3><a href="#">Office Interior Design</a></h3>
-			    					<span>Interior Design</span>
-			    				</div>
-		    				</div>
-            	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="/static/images/project-4.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<a href="/static/images/project-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-				    					<span class="icon-expand"></span>
-				    				</a>
-			    				</div>
-			    				<div class="text px-4">
-			    					<h3><a href="#">Office Interior Design</a></h3>
-			    					<span>Interior Design</span>
-			    				</div>
-		    				</div>
-            	</div>
-            	<div class="item">
-            		<div class="project">
-		    					<div class="img">
-				    				<img src="/static/images/project-5.jpg" class="img-fluid" alt="Colorlib Template">
-				    				<a href="/static/images/project-5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-				    					<span class="icon-expand"></span>
-				    				</a>
-			    				</div>
-			    				<div class="text px-4">
-			    					<h3><a href="#">Office Interior Design</a></h3>
-			    					<span>Interior Design</span>
-			    				</div>
-		    				</div>
-            			</div>
-            		</div>
-          		</div>
+              {%endfor%}
     		</div>
     	</div>
     </section>
 
-    <section class="testimony-section" data-section="projet">
+    <section class="testimony-section" id="projet">
       <div class="container">
       	<div class="row no-gutters justify-content-center pb-5">
           		<div class="col-md-12 heading-section text-center ftco-animate">
@@ -205,217 +148,35 @@
 		        <div class="col-md-6 col-lg-3 ftco-animate">
 				</div>
 			</div>
-        <div class="row ftco-animate justify-content-center">
-        	<div class="col-md-12 d-flex align-items-center">
+      <div class="row ftco-animate justify-content-center">
+        <div class="col-md-12 d-flex align-items-center">
         		<div class="carousel-testimony owl-carousel">
+              {%for proje in projet%}
 	        		<div class="item">
 	        			<div class="testimony-wrap d-flex align-items-stretch">
-		              <div class="user-img d-flex align-self-stretch" style="background-image: url(/static/images/testimony-1.jpg)">
-		              </div>
+		              <div class="user-img d-flex align-self-stretch" style="background-image: url(/static/images/testimony-1.jpg)">  
+                  </div>
 		              <div class="text d-flex align-items-center">
 		              	<div>
 			              	<div class="icon-quote">
-			              		<span class="icon-quote-left"></span>
+			              		<span class="icon-quote-left">{{proje.title}}</span>
 			              	</div>
-			                <p class="mb-4">Le premier projet...........................</p>
-			                <p class="name">Auteur </p>
+			                <p class="mb-4">{{proje.description}}</p>
+			                <p class="name">Auteur du projet : {{proje.autor}} </p>
 		                </div>
 		              </div>
 		            </div>
 	        		</div>
-	        		<div class="item">
-	        			<div class="testimony-wrap d-flex align-items-stretch">
-		              <div class="user-img d-flex align-self-stretch" style="background-image: url(/static/images/testimony-2.jpg)">
-		              </div>
-		              <div class="text d-flex align-items-center">
-		              	<div>
-			              	<div class="icon-quote">
-			              		<span class="icon-quote-left"></span>
-			              	</div>
-			                <p class="mb-4">deuxieme projet en cours de realisation .......................</p>
-			                <p class="name">Auteur 2</p>
-		                </div>
-		              </div>
-		            </div>
-	        		</div>
+              {%endfor%}
 	        	</div>
         	</div>
         </div>
       </div>
     </section>
 
-    <section class="ftco-section bg-light" data-section="blog">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <span class="subheading">Blog</span>
-            <h2 class="mb-4">Read Our Stories</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="post/" class="block-20" style="background-image: url('/static/images/image_1.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center pt-2 mb-4 topp">
-              		<div class="one mr-3">
-              			<span class="day">12</span>
-              		</div>
-              		<div class="two">
-              			<span class="yr">2019</span>
-              			<span class="mos">March</span>
-              		</div>
-              	</div>
-                <h3 class="heading"><a href="post/">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <div class="d-flex align-items-center mt-4 meta">
-	                <p class="mb-0"><a href="#" class="btn btn-secondary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-	                <p class="ml-auto mb-0">
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="post/" class="block-20" style="background-image: url('/static/images/image_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center pt-2 mb-4 topp">
-              		<div class="one mr-3">
-              			<span class="day">10</span>
-              		</div>
-              		<div class="two">
-              			<span class="yr">2019</span>
-              			<span class="mos">March</span>
-              		</div>
-              	</div>
-                <h3 class="heading"><a href="post/">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <div class="d-flex align-items-center mt-4 meta">
-	                <p class="mb-0"><a href="#" class="btn btn-secondary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-	                <p class="ml-auto mb-0">
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="post/" class="block-20" style="background-image: url('/static/images/image_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center pt-2 mb-4 topp">
-              		<div class="one mr-3">
-              			<span class="day">05</span>
-              		</div>
-              		<div class="two">
-              			<span class="yr">2019</span>
-              			<span class="mos">March</span>
-              		</div>
-              	</div>
-                <h3 class="heading"><a href="post/">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <div class="d-flex align-items-center mt-4 meta">
-	                <p class="mb-0"><a href="#" class="btn btn-secondary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-	                <p class="ml-auto mb-0">
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-              </div>
-            </div>
-          </div>
+    
 
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="post/" class="block-20" style="background-image: url('/static/images/image_4.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center pt-2 mb-4 topp">
-              		<div class="one mr-3">
-              			<span class="day">12</span>
-              		</div>
-              		<div class="two">
-              			<span class="yr">2019</span>
-              			<span class="mos">March</span>
-              		</div>
-              	</div>
-                <h3 class="heading"><a href="post/">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <div class="d-flex align-items-center mt-4 meta">
-	                <p class="mb-0"><a href="#" class="btn btn-secondary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-	                <p class="ml-auto mb-0">
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="post/" class="block-20" style="background-image: url('/static/images/image_5.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center pt-2 mb-4 topp">
-              		<div class="one mr-3">
-              			<span class="day">10</span>
-              		</div>
-              		<div class="two">
-              			<span class="yr">2019</span>
-              			<span class="mos">March</span>
-              		</div>
-              	</div>
-                <h3 class="heading"><a href="post/">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <div class="d-flex align-items-center mt-4 meta">
-	                <p class="mb-0"><a href="#" class="btn btn-secondary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-	                <p class="ml-auto mb-0">
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="post/" class="block-20" style="background-image: url('/static/images/image_6.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center pt-2 mb-4 topp">
-              		<div class="one mr-3">
-              			<span class="day">05</span>
-              		</div>
-              		<div class="two">
-              			<span class="yr">2019</span>
-              			<span class="mos">March</span>
-              		</div>
-              	</div>
-                <h3 class="heading"><a href="post/">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-                <div class="d-flex align-items-center mt-4 meta">
-	                <p class="mb-0"><a href="#" class="btn btn-secondary">Read More <span class="ion-ios-arrow-round-forward"></span></a></p>
-	                <p class="ml-auto mb-0">
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-	                </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="ftco-section contact-section ftco-no-pb" data-section="contact">
+    <section class="ftco-section contact-section ftco-no-pb" id="contact">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
