les fonctionalites finalisée. avant la mise en place des contenus

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,8 @@
               <li class="nav-item"><a href="#projet" class="nav-link"><span></span>Projects</a></li>
               <li class="nav-item"><a href="/post/#blog" class="nav-link"><span>Blog</span></a></li>
               <li class="nav-item"><a href="#contact" class="nav-link"><span>Contact</span></a></li>
-              <li class="nav-item cta"><a href="#" class="nav-link">Faire un Don</a></li>
-              <li class="nav-item cta"><a href="#" class="nav-link">S'inscrir au groupe</a></li>
+              <li class="nav-item cta"><a href="/don/" class="nav-link">Faire un Don</a></li>
+              <li class="nav-item cta"><a href="/inscription/" class="nav-link">S'inscrir au groupe</a></li>
 
             </ul>
           </div>
@@ -77,29 +77,21 @@
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span></a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Services</h2>
-              <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Architectural Design</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Interior Design</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Exterior Design</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Lighting Design</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>AutoCAD Service</a></li>
+
+                <li><a href="#home" class="icon-long-arrow-right mr-2"><span>Home</span></a></li>
+              <li><a href="#about" class="icon-long-arrow-right mr-2"><span>About</span></a></li>
+              <li><a href="#galerie" class="icon-long-arrow-right mr-2"><span>Galerie</span></a></li>
+              <li><a href="#projet" class="icon-long-arrow-right mr-2"><span></span>Projects</a></li>
+              <li><a href="/post/#blog" class="icon-long-arrow-right mr-2"><span>Blog</span></a></li>
+              <li><a href="#contact" class="icon-long-arrow-right mr-2"><span>Contact</span></a></li>
+              <li class="nav-item cta"><a href="don/" class="icon-long-arrow-right mr-2">Faire un Don</a></li>
+              <li class="nav-item cta"><a href="inscription/" class="icon-long-arrow-right mr-2">S'inscrir au groupe</a></li>
               </ul>
             </div>
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Have a Questions?</h2>
+              <h2 class="ftco-heading-2">Avez vous des Questions?</h2>
               <div class="block-23 mb-3">
                 <ul>
                   <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
