--- a/templates/base1.html
+++ b/templates/base1.html
@@ -40,12 +40,12 @@
           <ul class="navbar-nav nav ml-auto">
             <li class="nav-item"><a href="/#home" class="nav-link"><span>Home</span></a></li>
             <li class="nav-item"><a href="/#about" class="nav-link"><span>About</span></a></li>
-            <li class="nav-item"><a href="/galerie" class="nav-link"><span>Galerie</span></a></li>
+            <li class="nav-item"><a href="/#galerie" class="nav-link"><span>Galerie</span></a></li>
             <li class="nav-item"><a href="/#projet" class="nav-link"><span></span>Projects</a></li>
             <li class="nav-item"><a href="/post/" class="nav-link"><span>Blog</span></a></li>
             <li class="nav-item"><a href="/#contact" class="nav-link"><span>Contact</span></a></li>
-            <li class="nav-item cta"><a href="#" class="nav-link">Faire un Don</a></li>
-            <li class="nav-item cta"><a href="#" class="nav-link">S'inscrir au groupe</a></li>
+            <li class="nav-item cta"><a href="/don/" class="nav-link">Faire un Don</a></li>
+            <li class="nav-item cta"><a href="/inscription/" class="nav-link">S'inscrir au groupe</a></li>
 
           </ul>
         </div>
