--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
               <div class="media-body">
                 <h3 class="heading mb-3"> Histoire </h3>
                 <p>histoire du village.</p>
-                <p><a href="#" class="btn btn-primary">Read more</a></p>
+                <p><a href="histoire/" class="btn btn-primary">Read more</a></p>
               </div>
             </div>      
           </div>
@@ -35,7 +35,7 @@
               <div class="media-body">
                 <h3 class="heading mb-3">Atous</h3>
                 <p> les Atous du village.</p>
-                <p><a href="#" class="btn btn-primary">Read more</a></p>
+                <p><a href="atout/" class="btn btn-primary">Read more</a></p>
               </div>
             </div>    
           </div>
@@ -45,7 +45,7 @@
               <div class="media-body">
                 <h3 class="heading mb-3">Vision</h3>
                 <p>Ales visions du village.</p>
-                <p><a href="#" class="btn btn-primary">Read more</a></p>
+                <p><a href="vision/" class="btn btn-primary">Read more</a></p>
               </div>
             </div>      
           </div>
@@ -184,76 +184,46 @@
             <h2 class="mb-4">Contact Us</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
-        </div>
-        <div class="row no-gutters block-9">
-          <div class="col-md-6 order-md-last d-flex">
-            <form action="#" class="bg-light p-5 contact-form">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
+          <div class="row d-flex contact-info">
+          <div class="col-md-6 col-lg-3 d-flex">
+            <div class="align-self-stretch box p-4 text-center">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="icon-map-signs"></span>
               </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject">
-              </div>
-              <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-secondary py-3 px-5">
-              </div>
-            </form>
-          
+              <h3 class="mb-4">Address</h3>
+              <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+            </div>
           </div>
-
-          <div class="col-md-6 d-flex">
-          	<div id="map" class="bg-white"></div>
+          <div class="col-md-6 col-lg-3 d-flex">
+            <div class="align-self-stretch box p-4 text-center">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="icon-phone2"></span>
+              </div>
+              <h3 class="mb-4">Contact Number</h3>
+              <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+            </div>
           </div>
+          <div class="col-md-6 col-lg-3 d-flex">
+            <div class="align-self-stretch box p-4 text-center">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="icon-paper-plane"></span>
+              </div>
+              <h3 class="mb-4">Email Address</h3>
+              <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex">
+            <div class="align-self-stretch box p-4 text-center">
+              <div class="icon d-flex align-items-center justify-content-center">
+                <span class="icon-globe"></span>
+              </div>
+              <h3 class="mb-4">Website</h3>
+              <p><a href="#">yoursite.com</a></p>
+            </div>
+          </div>
+      </div>
         </div>
       </div>
-    </section>
-
-    <section class="ftco-section contact-section">
-      <div class="container">
-        <div class="row d-flex contact-info">
-          <div class="col-md-6 col-lg-3 d-flex">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-map-signs"></span>
-          		</div>
-          		<h3 class="mb-4">Address</h3>
-	            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-phone2"></span>
-          		</div>
-          		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-paper-plane"></span>
-          		</div>
-          		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-globe"></span>
-          		</div>
-          		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">yoursite.com</a></p>
-	          </div>
-          </div>
-        </div>
-      </div>
+      
     </section>
 {% endblock %}
