dernier commit avant l'hebergement

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -24,7 +24,7 @@
 			{% for post in post_list %}
 			<div>
 				<div style="float: left;" >
-					<img src="/static/images/image_1.jpg" style="width: 60%; height: 50%;" alt="">
+					<img src="/static/{{post.photo}}" style="width: 60%; height: 50%;" alt="">
 					<!--a href="post/" class="block-20" style="background-image: url('/static/images/image_1.jpg');"></a-->
 				</div>
 				<div>
